force-app/main/default/objects/Client_Success_Manager__c/Client_Success_Manager__c.object-meta.xml
<CustomObject>
    <label>Client Success Manager</label>
    <nameField>
        <displayFormat>CSM-{000}</displayFormat>
        <label>Client Success Manager</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Success Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>