force-app/main/default/objects/Client_Success_Manager__c/fields/Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Success_Managers1</relationshipName>
    <type>Lookup</type>
</CustomField>