force-app/main/default/objects/Client_Success_Manager__c/fields/Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in conjunction with the ClientSuccessManagerBeforeDelete trigger to prevent the deletion of certain Client Success Manager records.</description>
    <inlineHelpText>Used to prevent the deletion of certain Client Success Manager records.</inlineHelpText>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>