force-app/main/default/objects/Client_Success_Manager__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <label>Prospect-Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Success Managers</relationshipLabel>
    <relationshipName>Client_Success_Managers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>