force-app/main/default/objects/Client_Success_Manager__c/recordTypes/Client_Success_Manager_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Client_Success_Manager_Record_Type</fullName>
    <active>true</active>
    <description>Record type for the new HRG Client Success Manager</description>
    <label>Client Success Manager Record Type</label>
</RecordType>