force-app/main/default/objects/Client_Success_Manager__c/validationRules/CSM_Lockdown_checked_DoNotDelete.validationRule-meta.xml
<ValidationRule>
    <fullName>CSM_Lockdown_checked_DoNotDelete</fullName>
    <active>true</active>
    <description>Prevent the unchecking of a checked Do Not Delete field</description>
    <errorConditionFormula>AND( 
( ISCHANGED( Do_Not_Delete__c ) ), 
( Do_Not_Delete__c = FALSE), 
(NOT(BEGINS($Profile.Name,&quot;2008-09 Operations Administration&quot;))),
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Do_Not_Delete__c</errorDisplayField>
    <errorMessage>You cannot uncheck a checked Do Not Delete field. Please contact your Salesforce.com Business Unit Representative for assistance.</errorMessage>
</ValidationRule>